--- a/wwr/index.html
+++ b/wwr/index.html
@@ -56,6 +56,10 @@
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
+            <section>
+                <img class="wireframe" src="images/wireframe.jpeg">
+            </section>
+            
         </main>
         <footer>
             <p>Dry Oar &copy; 2023 - Roiman Romero</p>
